# project-chat-app

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  clean.ps1  client.ps1  conanfile.txt  docker-compose.yaml  server.ps1
db/: Makefile  create_tables.sql  create_user_and_db.sql
doc/: Doxyfile  Makefile
doc/html/: AuthenticationManager_8hpp_source.html  CLI_8hpp_source.html  ChatDatabase_8hpp_source.html  ClientHandler_8hpp_source.html  Client_8hpp_source.html  Commands_8hpp_source.html  Config_8hpp_source.html  JsonHandler_8hpp_source.html  Server_8hpp_source.html  User_8hpp_source.html  annotated.html  classAuthenticationManager-members.html  classAuthenticationManager.html  classCLI-members.html  classCLI.html  classChatDatabase-members.html  classChatDatabase.html  classClient-members.html  classClient.html  classClientHandler-members.html  classClientHandler.html  classCommandHandler-members.html  classCommandHandler.html  classCommands-members.html  classCommands.html  classCommandsLoggedIn-members.html  classCommandsLoggedIn.html  classCommandsNotLoggedIn-members.html  classCommandsNotLoggedIn.html  classJsonHandler-members.html  classJsonHandler.html  classServer-members.html  classServer.html  classUser-members.html  classUser.html  classes.html  dir_13a2eb73dd4679665815a7a8b4749dd5.html  dir_595fe20fb57a98f02e6fb015e0767c4c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9f931180b83b6ee7be279c9e5a0c5bb1.html  (+3 more)
doc/html/search/: all_1.js  all_2.js  classes_0.js  searchdata.js
doc/latex/: AuthenticationManager_8hpp_source.tex  CLI_8hpp_source.tex  ChatDatabase_8hpp_source.tex  ClientHandler_8hpp_source.tex  Client_8hpp_source.tex  Commands_8hpp_source.tex  Config_8hpp_source.tex  JsonHandler_8hpp_source.tex  Server_8hpp_source.tex  User_8hpp_source.tex  annotated.tex  classAuthenticationManager.tex  classCLI.tex  classChatDatabase.tex  classClient.tex  classClientHandler.eps  classClientHandler.tex  classCommandHandler.tex  classCommands.eps  classCommands.tex  classCommandsLoggedIn.eps  classCommandsLoggedIn.tex  classCommandsNotLoggedIn.eps  classCommandsNotLoggedIn.tex  classJsonHandler.tex  classServer.tex  classUser.tex  files.tex  hierarchy.tex  refman.tex
docker/: Dockerfile.build  Dockerfile.client  Dockerfile.multi  Dockerfile.postgres  Dockerfile.server
src/: CMakeLists.txt
src/App-Client/: CLI.cpp  CLI.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Commands.hpp
src/App-Client/CLI/: CLI.hpp  CMakeLists.txt
src/App-Client/Client/: CMakeLists.txt
src/App-Client/CommandHandler/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.hpp
src/App-Client/Commands/: CMakeLists.txt  Commands.cpp  Commands.hpp  CommandsLoggedIn.hpp  CommandsNotLoggedIn.cpp  CommandsNotLoggedIn.hpp
src/App-Client/User/: CMakeLists.txt
src/App-Common/: CMakeLists.txt  Config.hpp  JsonHandler.cpp  JsonHandler.hpp
src/App-Common/JsonHandler/: CMakeLists.txt
src/App-Server/: AuthenticationManager.hpp  CMakeLists.txt  ChatDatabase.hpp  ClientHandler.hpp  Makefile  main.cpp
src/App-Server/AuthenticationManager/: AuthenticationManager.cpp  CMakeLists.txt
src/App-Server/ChatDatabase/: CMakeLists.txt
src/App-Server/ClientHandler/: CMakeLists.txt
src/App-Server/Server/: CMakeLists.txt  Server.cpp  Server.hpp
src/app_client/: CMakeLists.txt  main.cpp
src/app_server/: CMakeLists.txt
src/cli/: CLI.cpp  CMakeLists.txt  CommandHandler.cpp  CommandHandler.hpp
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  Commands.cpp  CommandsLoggedIn.cpp  CommandsNotLoggedIn.cpp  User.cpp  User.hpp
src/common/: CMakeLists.txt  Config.hpp  Constants.hpp
src/server/: CMakeLists.txt  ChatDatabase.cpp  ClientHandler.cpp
tests/: CMakeLists.txt  Makefile  main.cpp
